Changelog for HybridAuth.

0.2.0 beta
==============
- Added parameter &groups=``. For example, &groups=`Users:1` will add new user to group "Users" with role "member"
- Updated snippet params, added russian localization.
- [#1] Updated readme

0.1.0 beta
==============
- Initial release.