@@ -1,5 +1,5 @@
-Вы можете авторизоваться на сайте через:
+[[%ha.login_intro]]
 <a href="[[+login_url]]&provider=Yandex">Yandex</a>,
-<a href="[[+login_url]]&provider=Google">Google</a> или
+<a href="[[+login_url]]&provider=Google">Google</a>,
 <a href="[[+login_url]]&provider=Twitter">Twitter</a>
 [[+error:notempty=`<div class="alert alert-block alert-error">[[+error]]</div>`]]
