@@ -8,3 +8,16 @@
 $_lang['hybridauth'] = 'HybridAuth';
 $_lang['ha_err_no_providers'] = 'You must specify at least one provider.';
 $_lang['ha_err_no_provider_keys'] = 'Could not retrieve keys for provider [[+provider]] from system settings. [[+provider]] was not activated.';
+
+/* Chunks */
+$_lang['ha.username'] = 'Username';
+$_lang['ha.fullname'] = 'Full name';
+$_lang['ha.email'] = 'Email';
+$_lang['ha.updateProfile'] = 'Update Profile';
+$_lang['ha.profile.update_success'] = 'Profile was updated successfully';
+$_lang['ha.profile.update_error'] = 'Error when update profile';
+$_lang['ha.logout'] = 'Logout';
+$_lang['ha.greeting'] = 'Welcome, ';
+$_lang['ha.providers.available'] = 'Available providers are ';
+$_lang['ha.login_intro'] = 'You can authorize on site with: ';
+/*--------*/
