@@ -8,3 +8,16 @@
 $_lang['hybridauth'] = 'HybridAuth';
 $_lang['ha_err_no_providers'] = 'Вы должны указать хотя бы одного провайдера.';
 $_lang['ha_err_no_provider_keys'] = 'Не могу получить ключи [[+provider]] из системных настроек. [[+provider]] не был активирован.';
+
+/* Chunks */
+$_lang['ha.username'] = 'Логин';
+$_lang['ha.fullname'] = 'Имя пользователя';
+$_lang['ha.email'] = 'Email';
+$_lang['ha.updateProfile'] = 'Обновить профиль';
+$_lang['ha.profile_update_success'] = 'Профиль успешно обновлен';
+$_lang['ha.profile_update_error'] = 'Ошибка при обновлении профиля';
+$_lang['ha.logout'] = 'Разлогиниться';
+$_lang['ha.greeting'] = 'Приветствую, ';
+$_lang['ha.providers_available'] = 'Доступны провайдеры ';
+$_lang['ha.login_intro'] = 'Вы можете авторизоваться на сайте через: ';
+/*--------*/
